chore: Add integration guide for on-site deployment

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,43 +1,43 @@
 ---
 title: Introduction
-description: 'Welcome to the home of your new documentation'
+description: 'Build loyal communities with targeted, gated offers'
 ---
 
 <img
   className="block dark:hidden"
-  src="/images/hero-light.svg"
+  src="/images/hero-example.png"
   alt="Hero Light"
 />
 <img
   className="hidden dark:block"
-  src="/images/hero-dark.svg"
+  src="/images/hero-example.png"
   alt="Hero Dark"
 />
 
-## Setting up
+## Quickstart
 
-The first step to world-class documentation is setting up your editing environments.
+In just 2 minutes, you can integrate gocertify and start delighting your shoppers with beautiful, on-brand, on-site offers! And no, you don't need a developer.
 
 <CardGroup cols={2}>
   <Card
-    title="Edit Your Docs"
+    title="Add gocertify on-site"
     icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
+    href="/integrateOnSite"
   >
-    Get your docs set up locally for easy development
+    Implement the gocertify experience on-site without a developer (~2 mins).
   </Card>
   <Card
-    title="Preview Changes"
+    title="Set up landing pages"
     icon="image"
-    href="https://mintlify.com/docs/development"
+    href="/landingPages"
   >
-    Preview your changes before you push to make sure they're perfect
+    We recommend adding additional landing pages to convert key communities (~5 mins). 
   </Card>
 </CardGroup>
 
 ## Make it yours
 
-Update your docs to your brand and add valuable content for the best user conversion.
+Customise the shopper experience to maximise conversion and deliver a truly on-brand experience.
 
 <CardGroup cols={2}>
   <Card
@@ -45,14 +45,14 @@ Update your docs to your brand and add valuable content for the best user conver
     icon="palette"
     href="https://mintlify.com/docs/settings/global"
   >
-    Customize your docs to your company's colors and brands
+    Customize placements to match your company's colors and brands
   </Card>
   <Card
     title="Reference APIs"
     icon="code"
     href="https://mintlify.com/docs/api-playground/openapi"
   >
-    Automatically generate endpoints from an OpenAPI spec
+    Leverage our APIs to build custom experiences
   </Card>
   <Card
     title="Add Components"
@@ -66,6 +66,6 @@ Update your docs to your brand and add valuable content for the best user conver
     icon="stars"
     href="https://mintlify.com/customers"
   >
-    Check out our showcase of our favorite documentation
+    Check out our showcase of how other companies are benefiting from gocertify
   </Card>
 </CardGroup>
