--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: 'Build loyal communities with targeted, gated offers'
+description: 'Start building loyal communities with targeted, gated offers.'
 ---
 
 <img
@@ -16,11 +16,13 @@ description: 'Build loyal communities with targeted, gated offers'
 
 ## Quickstart
 
-In just 2 minutes, you can integrate gocertify and start delighting your shoppers with beautiful, on-brand, on-site offers! And no, you don't need a developer.
+Deploy gocertify site-wide, by adding our [lightweight script](integrateOnSite) to the `<head>` of your site (no developer needed). This enables you to launch your offers within minutes and have full control over the shopper experience through our self-serve platform.
+
+To maximise performance we recommend also building dedicated [landing pages](landingPages) for your highest value campaigns.
 
 <CardGroup cols={2}>
   <Card
-    title="Add gocertify on-site"
+    title="Add gocertify script"
     icon="pen-to-square"
     href="/integrateOnSite"
   >
@@ -31,41 +33,6 @@ In just 2 minutes, you can integrate gocertify and start delighting your shopper
     icon="image"
     href="/landingPages"
   >
-    We recommend adding additional landing pages to convert key communities (~5 mins). 
-  </Card>
-</CardGroup>
-
-## Make it yours
-
-Customise the shopper experience to maximise conversion and deliver a truly on-brand experience.
-
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize placements to match your company's colors and brands
-  </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Leverage our APIs to build custom experiences
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of how other companies are benefiting from gocertify
+    Add additional landing pages to convert key communities (~5 mins). 
   </Card>
 </CardGroup>
