--- a/promoteOffers/linking-to-offers.mdx
+++ b/promoteOffers/linking-to-offers.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Code Blocks'
+title: 'Linking to offers'
 description: 'Display inline code and code blocks'
-icon: 'code'
+icon: 'link'
 ---
 
 ## Basic
