--- a/documentationSections/captureData/dataCapture.mdx
+++ b/documentationSections/captureData/dataCapture.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Data Capture'
+title: 'Enable Data Capture'
 description: 'Mintlify gives you complete control over the look and feel of your documentation using the mint.json file'
-icon: 'gear'
+icon: 'wpforms'
 ---
 
 Every Mintlify site needs a `mint.json` file with the core configuration settings. Learn more about the [properties](#properties) below.
