--- a/documentationSections/promoteOffers/on-site-placements.mdx
+++ b/documentationSections/promoteOffers/on-site-placements.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'On Site Placements'
 description: 'Text, title, and styling in standard markdown'
-icon: 'text-size'
+icon: 'square-web-awesome-stroke'
 ---
 
 ## Titles
