Iterating on structure

--- a/documentationSections/0_gettingStarted/integrateOnSite.mdx
+++ b/documentationSections/0_gettingStarted/integrateOnSite.mdx
@@ -53,12 +53,17 @@ Tag managers let you can easily add the gocertify script site-wide without needi
   <Accordion icon="network-wired" title="Awin Mastertag">
     Watch our [tutorial video](tutorial.com) to see how it's done.
 
-    Previewing helps you make sure your changes look as intended. We built a
-    command line interface to render these changes locally. 1. Install the
-    [Mintlify CLI](https://www.npmjs.com/package/mintlify) to preview the
-    documentation changes locally with this command: ``` npm i -g mintlify ```
-    2. Run the following command at the root of your documentation (where
-    `mint.json` is): ``` mintlify dev ```
+    <Steps>
+      <Step title="Add the gocertify plugin">
+        Navigate to the Awin Plugin Store, search for gocertify and click `Add to Account`.
+        <Frame>
+          <img src="/images/awinFeatured.png" alt="Awin gocertfiy Plugin" />
+        </Frame>
+      </Step>
+      <Step title="One click activate">
+        Navigate to your Mastertag Toolbox, and activate the gocertify plugin.
+      </Step>
+    </Steps>
   </Accordion>
 </AccordionGroup>
 
