--- a/documentationSections/0_gettingStarted/introduction.mdx
+++ b/documentationSections/0_gettingStarted/introduction.mdx
@@ -16,7 +16,7 @@ description: 'Start building loyal communities with targeted, gated offers.'
 
 ## Quickstart
 
-Deploy gocertify site-wide, by adding our [lightweight script](integrateOnSite) to the `<head>` of your site (no developer needed). This enables you to launch your offers within minutes and have full control over the shopper experience through our self-serve platform.
+Deploy gocertify site-wide, by adding our <Tooltip tip="Our script is just 12kb and optimised for performance">lightweight script</Tooltip> to the `<head>` of your site ([no developer needed](integrateOnSite)). This enables you to launch your offers within minutes and have full control over the shopper experience through our self-serve platform.
 
 To maximise performance we recommend also building dedicated [landing pages](landingPages) for your highest value campaigns.
 
@@ -24,14 +24,14 @@ To maximise performance we recommend also building dedicated [landing pages](lan
   <Card
     title="Add gocertify script"
     icon="pen-to-square"
-    href="/integrateOnSite"
+    href="integrateOnSite"
   >
     Implement the gocertify experience on-site without a developer (~2 mins).
   </Card>
   <Card
     title="Set up landing pages"
     icon="image"
-    href="/landingPages"
+    href="landingPages"
   >
     Add additional landing pages to convert key communities (~5 mins). 
   </Card>
