--- a/documentationSections/2_captureData/klayviyo.mdx
+++ b/documentationSections/2_captureData/klayviyo.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Integrate CDP'
+title: 'Klayviyo'
 description: 'Mintlify gives you complete control over the look and feel of your documentation using the mint.json file'
-icon: 'database'
+icon: 'fa-fw'
 ---
 
 Every Mintlify site needs a `mint.json` file with the core configuration settings. Learn more about the [properties](#properties) below.
