--- a/documentationSections/0_gettingStarted/introduction.mdx
+++ b/documentationSections/0_gettingStarted/introduction.mdx
@@ -1,7 +1,10 @@
 ---
-title: Introduction
+title: Quickstart
 description: 'Start building loyal communities with targeted, gated offers.'
 ---
+
+import LightweightScript from '/snippets/lightweight-script.mdx';
+
 
 <img
   className="block dark:hidden"
@@ -14,11 +17,11 @@ description: 'Start building loyal communities with targeted, gated offers.'
   alt="Hero Dark"
 />
 
-## Quickstart
+## Integration steps
 
-Deploy gocertify site-wide, by adding our <Tooltip tip="Our script is just 12kb and optimised for performance">lightweight script</Tooltip> to the `<head>` of your site ([no developer needed](integrateOnSite)). This enables you to launch your offers within minutes and have full control over the shopper experience through our self-serve platform.
+Deploy gocertify site-wide, by adding our <Tooltip tip="Our script is just 12kb and optimised for performance">lightweight script</Tooltip> to the `<head>` of your site ([no developer needed](integrateOnSite)). This enables you to launch your offers within minutes and have full control over the shopper experience through our self-serve platform (supported by your helpful gocertify account manager).
 
-To maximise performance we recommend also building dedicated [landing pages](landingPages) for your highest value campaigns.
+In addition to adding the head script, we recommend also building dedicated [landing pages](landingPages) for your highest value campaigns to maximise performance.
 
 <CardGroup cols={2}>
   <Card
