--- a/documentationSections/1_buildRewardFlows/closedUserGroups.mdx
+++ b/documentationSections/1_buildRewardFlows/closedUserGroups.mdx
@@ -3,3 +3,31 @@ title: 'Verify User Groups'
 description: 'Target communities'
 icon: 'person'
 ---
+
+
+
+{/* <CardGroup cols={2}>
+  <Card horizontal title="Key Workers" icon="square-1">
+  </Card>
+  <Card horizontal title="Students" icon="square-2">
+  </Card>
+  <Card horizontal title="Disabled" icon="square-3">
+  </Card>
+  <Card horizontal title="Youth" icon="square-4">
+  </Card>
+</CardGroup> */}
+
+<AccordionGroup>
+  <Accordion title="Key Workers">
+    You can put other components inside Accordions.
+
+  </Accordion>
+
+  <Accordion title="Youth" icon="alien-8bit">
+    Check out the [Accordion](/content/components/accordions) docs for all the supported props.
+  </Accordion>
+
+  <Accordion title="Disability">
+    Check out the [Accordion](/content/components/accordions) docs for all the supported props.
+  </Accordion>
+</AccordionGroup>
