--- a/documentationSections/3_promoteOffers/osmPersonalisationIntegrations.mdx
+++ b/documentationSections/3_promoteOffers/osmPersonalisationIntegrations.mdx
@@ -1,5 +1,5 @@
 ---
-title: Visibility toolkit
+title: CXP Integrations
 description: 'Start building loyal communities with targeted, gated offers.'
-icon: 'fa-fw'
+icon: 'bolt-lightning'
 ---
