--- a/documentationSections/2_captureData/bloomreach.mdx
+++ b/documentationSections/2_captureData/bloomreach.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Klayviyo'
+title: 'Bloomreach'
 description: 'Mintlify gives you complete control over the look and feel of your documentation using the mint.json file'
 icon: 'fa-fw'
 ---
