--- a/documentationSections/2_captureData/dotdigital.mdx
+++ b/documentationSections/2_captureData/dotdigital.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Klayviyo'
+title: 'Dotdigital'
 description: 'Mintlify gives you complete control over the look and feel of your documentation using the mint.json file'
 icon: 'fa-fw'
 ---
