--- a/documentationSections/3_promoteOffers/nosto.mdx
+++ b/documentationSections/3_promoteOffers/nosto.mdx
@@ -1,5 +1,5 @@
 ---
-title: Visibility toolkit
+title: Nosto
 description: 'Start building loyal communities with targeted, gated offers.'
 icon: 'fa-fw'
 ---
