--- a/documentationSections/0_gettingStarted/introduction.mdx
+++ b/documentationSections/0_gettingStarted/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Quickstart
-description: 'Start building loyal communities with targeted, gated offers.'
+description: 'Convert shoppers with targeted, gated offers.'
 ---
 
 import LightweightScript from '/snippets/lightweight-script.mdx';
@@ -19,7 +19,7 @@ import LightweightScript from '/snippets/lightweight-script.mdx';
 
 ## Integration steps
 
-Deploy gocertify site-wide, by adding our <Tooltip tip="Our script is just 12kb and optimised for performance">lightweight script</Tooltip> to the `<head>` of your site ([no developer needed](integrateOnSite)). This enables you to launch your offers within minutes and have full control over the shopper experience through our self-serve platform (supported by your helpful gocertify account manager).
+Integrate gocertify by adding our <Tooltip tip="Our script is just 12kb and optimised for performance">lightweight script</Tooltip> to the `<head>` of your site ([no developer needed](integrateOnSite)). This enables you to launch your offers within minutes and have full control over the shopper experience through our self-serve platform (supported by your helpful gocertify account manager).
 
 In addition to adding the head script, we recommend also building dedicated [landing pages](landingPages) for your highest value campaigns to maximise performance.
 
