--- a/documentationSections/1_buildRewardFlows/customiseBranding.mdx
+++ b/documentationSections/1_buildRewardFlows/customiseBranding.mdx
@@ -1,5 +1,31 @@
 ---
 title: 'Customise Branding'
-description: 'Target communities'
+description: 'Convert shoppers with targeted, gated offers.'
 icon: 'paintbrush'
 ---
+Perhaps the most important part of your reward flow is the branding. This is the first thing your users will see, 
+and it's important to make sure that the shopper experience closely aligns with your brand guidelines.
+
+..image example of the various custom options our customers have chosen..
+
+## Customise your visuals
+
+**Brand Name**
+
+
+**Favicon & logo**
+blah blah
+
+**Banner image**
+
+**Fonts**
+
+**Colors**
+
+**Custom Styling**
+Advanced CSS
+- list the items you can refer to.
+
+## Customise your messaging
+- List the different type of copy 
+Maybe put placements as a link
