--- a/documentationSections/1_buildRewardFlows/overview.mdx
+++ b/documentationSections/1_buildRewardFlows/overview.mdx
@@ -1,4 +1,27 @@
 ---
 title: Overview
-description: 'Start building loyal communities with targeted, gated offers.'
+description: 'Convert shoppers with targeted, gated offers.'
 ---
+
+<img
+  className="block dark:hidden"
+  src="/images/rewardFlow.png"
+  alt="Hero Light"
+/>
+<img
+  className="hidden dark:block"
+  src="/images/rewardFlow.png"
+  alt="Hero Dark"
+/>
+
+## What is a Reward Flow?
+Think of a reward flow as the journey that your shoppers take to unlock a reward. It's a series of steps that guide them 
+through the process of claiming a reward, from the moment they first see your offer to the moment they redeem it. By deploying
+these reward flows you can boost conversion and retention while giving back to key communities. 
+
+With gocertify you can create custom reward flows that are tailored to your brand and your audience, for example gating offers to specific target
+audiences (Key workers or Students), offering unique rewards (10% off or Free delivery) and defining the exact data you are collecting during the flow (i.e. Email or D.O.B).
+
+In this section we are going to focus on the core components of a reward flow and how you can use them to create a successful campaign. For more 
+information on how to promote your reward flow, check out our [Promote Offers](/documentationSections/3_promoteOffers/overview) section, and to learn more about 
+data capture, check out our [Data Capture](/documentationSections/2_captureData/overview.mdx) section.
